Fixed overflow bug

--- a/sbanken/src/scss/main.scss
+++ b/sbanken/src/scss/main.scss
@@ -26,6 +26,7 @@ a {
 }
 main {
     max-height: 100vh;
+    overflow-x: hidden;
 }
 a {
     color: whitesmoke;
